--- a/Jint/Jint.csproj
+++ b/Jint/Jint.csproj
@@ -7,6 +7,6 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Esprima" Version="2.0.0-beta-1328" />
+    <ProjectReference Include="..\..\esprima-dotnet\src\Esprima\Esprima.csproj" />
   </ItemGroup>
 </Project>
