--- a/Jint/Jint.csproj
+++ b/Jint/Jint.csproj
@@ -8,7 +8,9 @@
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Esprima" Version="2.0.0-beta-1292" />
     <PackageReference Include="Nullable" Version="1.3.0" PrivateAssets="all" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\esprima-dotnet\src\Esprima\Esprima.csproj" />
   </ItemGroup>
 </Project>
